# better_images

./: .gitignore  README.md  app.py  patch_torchvision.py  processor.py  pyproject.toml  run.sh
static/: index.html
static/css/: styles.css
static/js/: app.js
